--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install -g pulumi
 
       - name: Install Pulumi AWS plugin
-        run: pulumi plugin install aws@v5.10.0 --local
+        run: pulumi plugin install aws@v5.10.0
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
