--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -27,11 +27,15 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
-      
+
       - name: Pulumi login
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
         run: pulumi login
+
+      - name: Install project dependencies
+        run: npm install
+        working-directory: Infra
 
       - name: Select Pulumi stack
         run: pulumi stack select Konami33/Nextjs-Nodejs-Infra/dev --cwd Infra
