--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -28,8 +28,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
 
-      # - name: Set public key as github env
-      #   run: echo "PUBLIC_KEY=${{ secrets.PUBLIC_KEY }}" >> $GITHUB_ENV
+      - name: Set public key as github env
+        run: echo "PUBLIC_KEY=${{ secrets.PUBLIC_KEY }}" >> $GITHUB_ENV
 
       - name: Pulumi login
         env:
