--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -1,16 +1,16 @@
 ---
 name: Deploy Next.js and Node.js applications to EC2
 
-on:
-  push:
-    branches:
-      - main
-
 # on:
-#   workflow_run:
-#     workflows: ["Deploy Infrastructure"]
-#     types:
-#       - completed
+#   push:
+#     branches:
+#       - main
+
+on:
+  workflow_run:
+    workflows: ["Deploy Infrastructure"]
+    types:
+      - completed
 
 jobs:
   deploy:
@@ -27,6 +27,25 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
 
+      - name: Pulumi login
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+        run: pulumi login
+
+      - name: Pulumi stack select
+        run: pulumi stack select Konami33/Nextjs-Nodejs-Infra/dev --cwd Infra
+
+      - name: Pulumi refresh
+        run: pulumi refresh --yes --cwd Infra
+      
+      - name: Save Pulumi outputs
+        id: pulumi_outputs
+        run: |
+          NEXT_APP_IP=$(pulumi stack output next_app_ip --cwd Infra)
+          echo "NEXT_APP_IP=$NEXT_APP_IP" >> $GITHUB_ENV
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.3
         with:
@@ -34,11 +53,11 @@ jobs:
 
       - name: Copy app directory to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -r app ubuntu@13.250.50.133:~/app
+          scp -o StrictHostKeyChecking=no -r app ubuntu@${{ env.NEXT_APP_IP }}:~/app
       
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@13.250.50.133 << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ env.NEXT_APP_IP }} << 'EOF'
           # Update and install dependencies
           sudo apt update && sudo apt upgrade -y
           sudo apt install -y nodejs npm
@@ -48,7 +67,7 @@ jobs:
             sudo npm install -g pm2
           fi
 
-          echo "NEXT_PUBLIC_API_URL=http://13.250.50.133:5000" > ~/app/client/.env.local
+          echo "NEXT_PUBLIC_API_URL=http://${{ env.NEXT_APP_IP }}:5000" > ~/app/client/.env.local
 
           # Start Node.js backend
           cd ~/app/server
