--- a/app/client/Dockerfile
+++ b/app/client/Dockerfile
@@ -1,37 +1,25 @@
-# Stage 1: Build the Next.js app
-FROM node:18-alpine AS builder
+# client/Dockerfile
 
-# Set working directory
+# Use the official Node.js image
+FROM node:20-alpine
+
+# Set the working directory
 WORKDIR /app
 
+# Copy package.json and package-lock.json
+COPY package*.json ./
+
 # Install dependencies
-COPY package.json package-lock.json ./
 RUN npm install
 
 # Copy the rest of the application code
 COPY . .
 
-# Build the Next.js app
+# Build the Next.js application
 RUN npm run build
-
-# Stage 2: Serve the built app
-FROM node:18-alpine
-
-# Set working directory
-WORKDIR /app
-
-# Copy the build from the previous stage
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/next.config.js ./
-COPY --from=builder /app/node_modules ./node_modules
-
-# Set environment variable for production
-ENV NODE_ENV=production
 
 # Expose the port the app runs on
 EXPOSE 3000
 
-# Start the Next.js app
-CMD ["npm", "start"]
+# Start the Next.js application
+CMD ["npm", "run", "start"]
