--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,14 +1,17 @@
 version: '3'
-
 services:
-  nodejs-app:
-    build: ./server
-    ports:
-      - "5000:5000"
-
   nextjs-app:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    environment:
-      NEXT_PUBLIC_API_URL: http://nodejs-app:5000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  nodejs-server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
