--- a/app/server/Dockerfile
+++ b/app/server/Dockerfile
@@ -1,17 +1,21 @@
-# Use the official Node.js image
-FROM node:18-alpine
+# server/Dockerfile
 
-# Set working directory
-WORKDIR /usr/src/app
+# Use the official Node.js image
+FROM node:20-alpine
+
+# Set the working directory
+WORKDIR /app
+
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
 # Install dependencies
-COPY package.json package-lock.json ./
 RUN npm install
 
 # Copy the rest of the application code
 COPY . .
 
-# Expose the port the app runs on
+# Expose the port the server runs on
 EXPOSE 5000
 
 # Start the Node.js server
